Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Optimized the validate() method of the CPSAttachedFileWidget
- Removing a widget without redoing the layout now doesn't raise an 
  error when you render a document. 
- You no longer can have a widget twice in a layouts layout.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-